🐝 fix: load Lato bold and color for link

--- a/src/ducks/notifications/html/templates/cozy-layout.hbs
+++ b/src/ducks/notifications/html/templates/cozy-layout.hbs
@@ -1,6 +1,6 @@
 <mjml>
    <mj-head>
-      <mj-font name="Lato" href="https://fonts.googleapis.com/css?family=Lato" />
+      <mj-font name="Lato" href="https://fonts.googleapis.com/css?family=Lato:400,700" />
       <mj-style inline="inline">
         {{{ embedFile 'style.css' }}}
       </mj-style>
