✨ feat: remove legal mentions

--- a/src/ducks/notifications/html/templates/cozy-layout.hbs
+++ b/src/ducks/notifications/html/templates/cozy-layout.hbs
@@ -92,7 +92,7 @@
             {{#block 'footerRight' }}
             <mj-text css-class="footer__help">
               <a css-class="footer__help" href="https://support.cozy.io/">
-                Aide et support - Mentions légales
+                Aide et support
               </a>
             </mj-text>
             {{/block}}
