feat: added balance warning color (orange) for account lower thant the settings limit

--- a/src/components/Figure/Figure.styl
+++ b/src/components/Figure/Figure.styl
@@ -17,3 +17,9 @@
 
     .bnk-figure-currency
         color   pomegranate
+
+.bnk-figure-content--warning
+    color   texasRose
+
+    .bnk-figure-currency
+        color   texasRose
