--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -26,9 +26,9 @@
             .account_name
                 color charcoalGrey
 
-                &.alert
+                &.warning
                     font-weight bold
-                    color pomegranate
+                    color texasRose
 
                     span
                         margin-left 5px
@@ -37,6 +37,8 @@
                         &:before
                             vertical-align middle
                             margin-bottom 3px
+                &.alert
+                    color pomegranate
 
 +small-screen()
     .balance
