fix: add cursor pointer on category icon on a transaction line

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -28,6 +28,9 @@
         &:last-child
             border-bottom 0
 
+    .bnk-op-caticon
+        cursor pointer
+
     +medium-screen()
         .bnk-op-desc
             cursor pointer
