--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html lang="{{.Locale}}">
 <head>
   <meta charset="utf-8">
-  <title>Cozy Bank</title>
+  <title>Cozy Banks</title>
   <% if (__TARGET__ !== 'mobile') { %>
   <link rel="stylesheet" type="text/css" href="//{{.Domain}}/assets/fonts/fonts.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -29,6 +29,7 @@
   data-cozy-domain="{{.Domain}}"
   data-cozy-locale="{{.Locale}}"
   data-cozy-app-name="{{.AppName}}"
+  data-cozy-app-editor="{{.AppEditor}}"
   data-cozy-icon-path="{{.IconPath}}"
   data-cozy-tracking="{{.Tracking}}"
   <% } %>
