🐝 fix: Bank -> Banks in email and store descriptions

--- a/src/ducks/notifications/html/templates/bank-layout.hbs
+++ b/src/ducks/notifications/html/templates/bank-layout.hbs
@@ -2,7 +2,7 @@
   {{#content "logoUrl"}}https://files.cozycloud.cc/bank/email-assets/logo-bank.png{{/content}}
 
   {{#content "appName"}}
-    Bank
+    Banks
   {{/content}}
 
 {{/extend}}
