--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -115,7 +115,7 @@
     .active:hover
         background-color silver
 
-    .account-count
+    .account-secondary-info
         padding-left .5em
         color coolGrey
         font-size .8em
