--- a/src/ducks/settings/GroupsSettings.styl
+++ b/src/ducks/settings/GroupsSettings.styl
@@ -13,11 +13,11 @@
             white-space nowrap
 
     &__label
-        maxed-flex-basis 50%
+        maxed-flex-basis 25%
         composes mobile-row-main from '../../components/Table/styles.styl'
 
     &__accounts
-        maxed-flex-basis 50%
+        maxed-flex-basis 75%
         composes mobile-row-label from '../../components/Table/styles.styl'
 
         +small-screen()
@@ -29,7 +29,10 @@
 
 .GrpStg
     &__accntLabel
-        maxed-flex-basis 50%
+        maxed-flex-basis 25%
+
+    &__accntBank
+        maxed-flex-basis 25%
 
     &__accntNumber
         maxed-flex-basis 30%
