✨ feat: showing groups and allow click on account/group to go to transactions page

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -8,6 +8,10 @@
 .balance
     .kpi
         margin 0 0 1em 0
+
+    .balance-row
+        cursor pointer
+
     .balance-table
         .account_name
             maxed-flex-basis 30%
