--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -65,6 +65,9 @@
         background-repeat no-repeat
         transition all .2s
 
+    .bnk-table-chevron--right
+        background-image embedurl('../../assets/icons/icon-chevron-right.svg')
+
     .bnk-table-row
     .bnk-table-row--uncollapsed
         color charcoalGrey
@@ -72,15 +75,13 @@
         .bnk-table-percentage
             font-weight bold
 
-    .bnk-table-row
-        .bnk-table-chevron
-            background-image embedurl('../../assets/icons/icon-chevron-right.svg')
-
     .bnk-table-row--uncollapsed
-    .bnk-table-row--uncollapsed:hover
-        .bnk-table-chevron
-            background-image embedurl('../../assets/icons/icon-chevron-down-active.svg')
-            transform   rotate3d(1, 0, 0, 180deg)
+        background-color paleGrey
+        cursor default
+
+        *
+            color coolGrey !important
+
 
     +small-screen('min')
         .bnk-table-category-category
