🐝 fix: balance was not in a Figure when it was 0

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -12,6 +12,14 @@
     .balance-row
         cursor pointer
 
+    .balance-row--selected
+        border-left 0.25rem dodgerBlue solid
+        background alpha(dodgerBlue, 0.1)
+
+    .balance-row--selected-account-from-group
+        border-left 0.25rem #cdced2 solid
+        background alpha(silver, 0.1)
+
     .balance-table
         .account_name
             maxed-flex-basis 30%
