🐝 fix: use active for ux

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -18,6 +18,12 @@
         &
             padding-right 2.5rem
 
+.Balance__table
+    .Balance__row
+        &:active
+        &:focus
+            background alpha(dodgerBlue, 0.1)
+
 .Balance__row--selected
     border-left 0.25rem dodgerBlue solid
     background alpha(dodgerBlue, 0.1)
