--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -44,6 +44,9 @@
     color coolGrey
     composes mobile-row-label from '../../components/Table/styles.styl'
 
+
+
+.Balance__group-accounts
 .Balance__account_number
     maxed-flex-basis 25%
     color coolGrey
