🐝 fix(account-switch): add cursor pointer

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -20,6 +20,7 @@
         text-decoration  underline
 
 .account-switch-button
+    cursor pointer
     margin 10px 0
     width 100%
     padding 15px 10%
