--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -6,6 +6,10 @@
     @extend $full-width-table
 
 
+// TODO shouldn't this be the default ?
+.Balance__section-title
+    margin-top 2rem
+
 .Balance__kpi
     margin 0 0 1em 0
 
