🔧 chore: add link to cozy-ui issue

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -7,6 +7,7 @@
 
 
 // TODO shouldn't this be the default ?
+// See https://github.com/cozy/cozy-ui/issues/358
 .Balance__section-title
     margin-top 2rem
 
