--- a/src/ducks/notifications/html/templates/health-bill-linked.hbs
+++ b/src/ducks/notifications/html/templates/health-bill-linked.hbs
@@ -23,7 +23,11 @@
                 <tr class="js-transaction tableRow">
                   <td width="40px"><img style="width: 32px; height: 32px" src='https://files.cozycloud.cc/bank/email-assets/icons/icon-cat-{{ parentCategory this }}.png' /></td>
                   <td>
-                    {{ capitalize this.label }}, {{t 'treatedBy'}}
+                    {{ capitalize this.label }}
+                  </td>
+                  <td align="right">
+                    <img style="width: 16px; height: 16px; vertical-align: middle;" src='https://files.cozycloud.cc/bank/email-assets/icons/icon-hourglass-blue.svg' />
+                    {{ t 'treatedBy' }}
                     {{#each this.reimbursements as |reimbursement|}}
                     {{get ../../../../bills this.billId 'vendor'}}{{#unless @last}}, {{/unless}}
                     {{/each}}
