--- a/src/ducks/notifications/html/templates/health-bill-linked.hbs
+++ b/src/ducks/notifications/html/templates/health-bill-linked.hbs
@@ -26,7 +26,7 @@
                     {{ capitalize this.label }}
                   </td>
                   <td align="right">
-                    <img style="width: 16px; height: 16px; vertical-align: middle;" src='https://files.cozycloud.cc/banks/email-assets/icons/icon-hourglass-blue.svg' />
+                    <img style="width: 16px; height: 16px; vertical-align: middle;" src='https://files.cozycloud.cc/banks/email-assets/icons/icon-hourglass-blue.png' />
                     {{ t 'treatedBy' }}
                     {{#each this.reimbursements as |reimbursement|}}
                     {{get ../../../../bills this.billId 'vendor'}}{{#unless @last}}, {{/unless}}
