feat: End of refactoring action 🤯

--- a/src/styles/utilities.styl
+++ b/src/styles/utilities.styl
@@ -24,3 +24,10 @@
     .u-hover:hover
         background paleGrey
         cursor pointer
+
+    // to remove after https://github.com/cozy/cozy-ui/pull/399 is merged
+    .u-p-0
+        padding 0
+
+    .u-m-0
+        margin 0
