fix: Health menu witch does not come back to the line 🎨

--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -5,7 +5,7 @@
     // in a menu has a padding to account for the background-icon
     // TODO remove this padding from the ActionMenu
     padding 0 !important
-    white-space inherit
+    white-space inherit !important
 
 .TransactionAction-disabled
     cursor: default
