--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Cozy Banks</title>
   <% if (__TARGET__ !== 'mobile') { %>
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" type="text/css" href="//{{.Domain}}/assets/fonts/fonts.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
