--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -9,6 +9,7 @@
     .bnk-op-date
         maxed-flex-basis 15%
         color coolGrey
+        text-align right
 
     .bnk-op-desc
         maxed-flex-basis 30%
