feat: add Badge on HealthExpenseStatusAction on mobile

--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -1,3 +1,5 @@
+@require 'settings/breakpoints'
+
 .TransactionAction
     cursor pointer
     text-decoration none
@@ -12,6 +14,9 @@
 
 .TransactionActionMenu
     width 100%
+
+    +small-screen()
+        text-align center
 
 .TransactionActionMenuItem
     text-align left
