🔨 refactor: rename css classes

--- a/src/components/Figure/Figure.styl
+++ b/src/components/Figure/Figure.styl
@@ -1,25 +1,25 @@
 
-.bnk-figure-total
+.Figure-total
     font-weight    900
 
-.bnk-figure-currency
+.Figure-currency
     margin-left .2em
     color       coolGrey
 
-.bnk-figure-content--positive
+.Figure-content--positive
     color   emerald
 
-    .bnk-figure-currency
+    .Figure-currency
         color   emerald
 
-.bnk-figure-content--negative
+.Figure-content--negative
     color   pomegranate
 
-    .bnk-figure-currency
+    .Figure-currency
         color   pomegranate
 
-.bnk-figure-content--warning
+.Figure-content--warning
     color   texasRose
 
-    .bnk-figure-currency
+    .Figure-currency
         color   texasRose
