--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -1,24 +1,22 @@
 @require 'settings/breakpoints'
 
-.bnk-figure-wrapper
+.FigureBlock
     color charcoalGrey
 
-.bnk-figure-label
+.FigureBlock-label
     color coolGrey
     margin 0
     text-transform uppercase
     font-size 0.75rem
     line-height 1rem
 
-.bnk-figure
+.FigureBlock-figure
     font-size 2rem
     line-height 2.625rem
 
 +small-screen()
-    .bnk-figure-wrapper
+    .FigureBlock
         font-size .7em
 
-    .bnk-figure
-        font-size 1.5rem
-        line-height 1.75rem
+    .FigureBlock-figure
         padding-bottom 0.5rem
