--- a/src/components/Figure/Figure.styl
+++ b/src/components/Figure/Figure.styl
@@ -1,3 +1,4 @@
+@require 'settings/breakpoints'
 
 .Figure-total
     font-weight    900
@@ -23,3 +24,12 @@
 
     .Figure-currency
         color   texasRose
+
+.Figure--big
+    font-size 2rem
+    line-height 2.625rem
+
++small-screen()
+    .Figure--big
+        font-size 1.5rem
+        line-height 1.75rem
