--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -28,6 +28,24 @@
             width 100%
         &:last-child
             border-bottom 0
+    .bnk-transaction-mobile-action
+        position relative
+        flex-basis 2rem
+        flex-shrink 0
+        flex-grow 0
+        text-align right
+        margin-left 1rem
+        padding-left 0.4rem
+
+        &:before
+            content ''
+            position absolute
+            top 50%
+            left -.0635rem
+            width: .0635rem
+            height 1.5rem
+            background-color silver
+            transform translateY(-50%)
 
     .bnk-op-caticon
         cursor pointer
