fix: properly align default actions on medium screens

--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -15,7 +15,7 @@
 .TransactionActionMenu
     width 100%
 
-    +small-screen()
+    +medium-screen()
         text-align center
 
 .TransactionActionMenuItem
