feat: increase clickable area on compact action buttons

--- a/src/ducks/transactions/TransactionActions.styl
+++ b/src/ducks/transactions/TransactionActions.styl
@@ -20,3 +20,14 @@
 
 .TransactionActionMenuItem
     text-align left
+
+.TransactionActionButton
+    +medium-screen()
+        // This element increases the click area of the button
+        &:before
+            content ''
+            position absolute
+            top 0
+            bottom 0
+            width 1rem
+            right 100%
