feat: decrease vertical padding on mobile transaction rows

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -26,6 +26,8 @@
     .bnk-transaction-mobile
         & > td
             width 100%
+            padding-top .75rem
+            padding-bottom .75rem
         &:last-child
             border-bottom 0
     .bnk-transaction-mobile-action
