--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -26,16 +26,16 @@
     .bnk-transaction-mobile
         & > td
             width 100%
+            padding-top .75rem
+            padding-bottom .75rem
         &:last-child
             border-bottom 0
     .bnk-transaction-mobile-action
         position relative
-        flex-basis 2rem
+        flex-basis 2.5rem
         flex-shrink 0
         flex-grow 0
-        text-align right
         margin-left 1rem
-        padding-left 0.4rem
 
         &:before
             content ''
@@ -51,6 +51,9 @@
         cursor pointer
 
     +medium-screen()
+        .bnk-transaction-mobile td:last-child
+            padding-right 0
+
         .bnk-op-desc
             cursor pointer
             maxed-flex-basis 60%
