feat: layout of transactions page changes, scrollable area the bottom

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -2,8 +2,7 @@
 @require '~styles/mixins.styl'
 @require 'settings/breakpoints'
 
-.bnk-op-table
-    @extend $full-width-table
+.TransactionTable
     color charcoalGrey
 
     .bnk-op-date
