--- a/src/components/PageTitle/styles.styl
+++ b/src/components/PageTitle/styles.styl
@@ -3,7 +3,7 @@
 .PageTitle
     font-size 1.5rem
     margin 0 auto 2rem
-    line-height 1
+    line-height 1.5
 
     +small-screen()
         // ellipsis
@@ -14,7 +14,4 @@
         margin    0
         overflow hidden
         position relative
-        // DIRTY why isn't the font correctly rendered
-        // vertically centered in the bounding box
-        top 2px
-        margin-bottom 2rem
+        margin-bottom 0
