feat(transaction row): categorization and disabled comments in modal

--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -1,3 +1,29 @@
 .TransactionModalHeading
     text-align center
     padding-top 3px
+
+.TransactionModalContent
+    padding 0
+
+    &:last-child
+        padding 0
+
+.TransactionModalSeparator
+    margin-top 0
+    margin-bottom 0
+    border 0
+    border-top 1px solid silver
+
+.TransactionModalRow
+    padding-left 24px
+    padding-right 24px
+    height 57px
+    cursor pointer
+
+.TransactionModalRow-disabled
+    color coolGrey
+    font-style italic
+    cursor default
+
+.TransactionModalRowIcon
+    margin-right 24px
