feat: account switch is not in the sidebar anymore

--- a/src/components/Breadcrumb/style.styl
+++ b/src/components/Breadcrumb/style.styl
@@ -1,6 +1,7 @@
 @require 'settings/breakpoints'
 
 .Breadcrumb
+    margin-bottom 1rem
     &::after
         content ''
         clear left
@@ -16,7 +17,8 @@
         color black
 
     &__separator
-        horizontally-padded .3em
+        padding-left .3em
+        padding-right .3em
 
     &__link
         cursor pointer
