feat(transaction row): add general transaction infos to modal

--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -17,7 +17,7 @@
 .TransactionModalRow
     padding-left 24px
     padding-right 24px
-    height 57px
+    min-height 57px
     cursor pointer
 
 .TransactionModalRow-disabled
@@ -25,5 +25,32 @@
     font-style italic
     cursor default
 
+.TransactionModalRow-multiline
+    padding-top 12px
+    padding-bottom 12px
+
 .TransactionModalRowIcon
     margin-right 24px
+
+.TransactionModalRowIcon-alignTop
+    margin-top 3px
+
+.TransactionModalRowIcon-reversed
+    transform rotate(180deg)
+
+.TransactionLabel
+    font-weight bold
+    line-height 1.5
+    color charcoalGrey
+
+.TransactionInfos
+    margin-top 8px
+
+.TransactionInfo
+    line-height 1.7
+    font-size 14px
+
+.TransactionInfoLabel
+    display inline-block
+    margin-right 8px
+    color charcoalGrey
