--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -1,6 +1,6 @@
 .TransactionModalHeading
     text-align center
-    padding-top 3px
+    padding-top 4px
 
 .TransactionModalContent
     padding 0
@@ -54,3 +54,7 @@
     display inline-block
     margin-right 8px
     color charcoalGrey
+
+.TransactionModalCross
+    width 16px
+    height 16px
