feat(transaction row): handle clickable state on modal rows

--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -30,12 +30,14 @@
     padding-left 24px
     padding-right 24px
     min-height 57px
-    cursor pointer
 
 .TransactionModalRow-disabled
     color coolGrey
     font-style italic
     cursor default
+
+.TransactionModalRow-clickable
+    cursor pointer
 
 .TransactionModalRow-multiline
     padding-top 12px
