feat: set cursor pointer on clickable part of transaction row

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -46,6 +46,9 @@
     .bnk-op-caticon
         cursor pointer
 
+    .bnk-op-clickable-area
+        cursor pointer
+
     +medium-screen()
         .bnk-transaction-mobile td:last-child
             padding-right 0
