feat: fixed header on mobile transaction modal

--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -6,6 +6,12 @@
             min-height 3rem
             padding-top 0
             margin-bottom 0
+            position fixed
+            top 0
+            left 0
+            right 0
+            background-color white
+            border-bottom 1px solid silver
 
 .TransactionModalHeading
     text-align center
@@ -19,6 +25,9 @@
 
     &:last-child
         padding 0
+
+        +small-screen()
+            padding-top 3rem
 
 .TransactionModalSeparator
     margin-top 0
@@ -72,6 +81,7 @@
 .TransactionModalCross
     width 16px
     height 16px
+    z-index 1
 
     +small-screen()
         top 0.35rem !important
