feat: show an arrow to hide the modal on mobile

--- a/src/ducks/transactions/TransactionModal.styl
+++ b/src/ducks/transactions/TransactionModal.styl
@@ -84,4 +84,13 @@
     z-index 1
 
     +small-screen()
-        top 0.35rem !important
+        display none
+
+.TransactionModalCloseButton
+    background-color transparent
+    border-width 0
+    position fixed
+    top 1rem
+    left 1rem
+    padding 0
+    cursor pointer
