--- a/src/components/PageTitle/styles.styl
+++ b/src/components/PageTitle/styles.styl
@@ -15,3 +15,4 @@
         overflow hidden
         position relative
         margin-bottom 0
+        width 100% // not sure why otherwise the block does not take all the space
