✨ feat: select date month width is fixed

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -37,6 +37,9 @@ select-date-height-small = 2.5rem
             height 100%
             vertical-align top // corrects a 1px bug on Windows' Chrome
 
+.SelectDates__month
+    width 9rem
+
 +small-screen()
     .SelectDates
         m = 0.75rem // size of the margin-top/bottom
