🐝 fix: recompute scrolling element after window resize

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -72,5 +72,8 @@ select-date-height-small = 2.5rem
     cursor pointer
     color slateGrey
 
+.SelectDates__Button--disabled
+    color coolGrey
+
 .SelectDates__Icon
     color slateGrey
