--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -74,6 +74,7 @@ select-date-height-small = 2.5rem
 
 .SelectDates__Button--disabled
     color coolGrey
+    cursor not-allowed
 
 .SelectDates__Icon
     color slateGrey
