--- a/src/ducks/categories/Chart.styl
+++ b/src/ducks/categories/Chart.styl
@@ -1,12 +1,15 @@
 @require 'tools/mixins'
 @require 'settings/breakpoints'
 
-.bnk-chart-pie
+.bnk-chart
     margin 0.75rem auto
     canvas
         max-width 100%
-        margin auto
+        margin-left auto
 
 +small-screen()
-    .bnk-chart-pie
+    .bnk-chart
         margin-top 0
+
+        canvas
+            margin-right auto
