--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -19,16 +19,36 @@
             position absolute
             line-height 24px
 
-    .bnk-cat-figure
-        padding 2rem 0 0
-
     .bnk-cat-chart
-        flex-basis 50%
+        height 182px
         margin-top -100px
+        margin-left auto
+        position relative
+
+.CategoriesChart__FigureBlockContainer
+    position absolute
+    top 25px
+    bottom 25px
+    left 30px
+    right 30px
+    border-radius 50%
+    display flex
+    flexdrection column
+    justify-content center
+    align-items center
+
+.CategoriesChart__FigureBlock
+    display flex
+    flex-direction column-reverse
+    align-items center
+    text-align center
+
+.CategoriesChart__Figure
+    font-size 1.5rem
+    line-height 1.33
 
 +small-screen()
     .bnk-cat-top
-        .bnk-cat-figure
         .bnk-cat-filter
             padding 0.65rem 0 0
 
@@ -36,8 +56,12 @@
             flex-basis 100%
 
         .bnk-cat-chart
-            flex-basis 100%
-            margin-top 0
+            margin-top 1.5rem
+            margin-bottom 1.5rem
+            margin-right auto
+
+    .CategoriesChart__Figure
+        padding-bottom 0
 
 // Table
 .bnk-table-category
