feat(categories): add PercentageLine

--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -63,6 +63,12 @@
     .CategoriesChart__Figure
         padding-bottom 0
 
+.PercentageLine
+    position absolute
+    bottom -1px
+    left 0
+    height 2px
+
 // Table
 .bnk-table-category
     @extend $full-width-table
@@ -83,6 +89,7 @@
     .bnk-table-row
     .bnk-table-row--uncollapsed
         color charcoalGrey
+        position relative
 
         .bnk-table-percentage
             font-weight bold
