--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -58,6 +58,7 @@ select-date-height-small = 2.75rem
         justify-content center
         align-content center
         border-bottom: 1px solid silver
+        color slateGrey
 
     .SelectDates__DateYearSelector
         flex-grow 1
@@ -77,6 +78,9 @@ select-date-height-small = 2.75rem
             width 100%
             margin-right -1.3rem
 
+        svg
+            color coolGrey
+
     .SelectDates__separator
         height 1.5rem
         margin-left 0.875rem
@@ -89,12 +93,16 @@ select-date-height-small = 2.75rem
     .SelectDates__Button
         width auto
         background-color transparent
+        color coolGrey
 
     .SelectDates__Button--prev
         padding-right 0.875rem
 
     .SelectDates__Button--next
         padding-left 0.875rem
+
+    .SelectDates__Select
+        color inherit
 
 .SelectDates__Button
     cursor pointer
@@ -103,6 +111,3 @@ select-date-height-small = 2.75rem
 .SelectDates__Button--disabled
     color coolGrey
     cursor not-allowed
-
-.SelectDates__Icon
-    color slateGrey
