feat(dates filter): apply a flex-grow ratio on month and year selects

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -103,8 +103,11 @@ select-date-height-small = 2.75rem
     .SelectDates__Select
         color inherit
 
-    .SelectDates__SelectRoot
+    .SelectDates__SelectYear
         flex-grow 1
+
+    .SelectDates__SelectMonth
+        flex-grow 2
 
 .SelectDates__Button
     cursor pointer
