feat(dates filter): set disabled arrow color to silver on mobile

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -94,6 +94,9 @@ select-date-height-small = 2.75rem
         background-color transparent
         color coolGrey
 
+    .SelectDates__Button--disabled svg
+        color silver
+
     .SelectDates__Button--prev
         padding-right elements-spacing
 
