feat(AccountSwitch): add a small version

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -147,3 +147,9 @@
     +small-screen()
         margin-bottom 0
         max-width 100%
+
+.AccountSwitch__SelectText
+    margin-bottom 0
+
+.AccountSwitch--small .AccountSwitch__SelectText
+    font-size 1.125rem
