feat: SelectBox with year

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -86,6 +86,7 @@ select-date-height-small = 2.75rem
 .SelectDates__Button
     cursor pointer
     color slateGrey
+    transition transform 0.3s ease
 
 .SelectDates__Button--disabled
     color coolGrey
