feat(categories): use new Breadcrumb in CategoriesHeader

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -19,3 +19,6 @@
         font-size .8em
         position absolute
         line-height 1.5rem
+
+.CategoriesHeader__Breadcrumb
+    margin-top 2.375rem
