--- a/src/ducks/categories/CategoriesChart.styl
+++ b/src/ducks/categories/CategoriesChart.styl
@@ -17,7 +17,7 @@
     right 30px
     border-radius 50%
     display flex
-    flexdrection column
+    flex-direction column
     justify-content center
     align-items center
 
