feat(Figure): add withCurrencySpacing prop

--- a/src/components/Figure/Figure.styl
+++ b/src/components/Figure/Figure.styl
@@ -4,8 +4,10 @@
     font-weight    900
 
 .Figure-currency
-    margin-left .2em
     color       coolGrey
+
+.Figure__currency--withSpacing
+    margin-left .2em
 
 .Figure-content--positive
     color   emerald
