fix(transactions): remove margin-top on description caption

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -13,6 +13,9 @@
     .bnk-op-desc
         maxed-flex-basis 40%
 
+    .bnk-op-desc-caption
+        margin-top 0
+
     .bnk-op-amount
         maxed-flex-basis 20%
         text-align right
