🔧 chore: add name prefix

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,5 +33,6 @@
   data-cozy-app-editor="{{.AppEditor}}"
   data-cozy-icon-path="{{.IconPath}}"
   data-cozy-tracking="{{.Tracking}}"
+  data-cozy-app-name-prefix="{{.AppNamePrefix}}"
   <% } %>
 >
