🐝 fix: rigth colors for select

--- a/src/components/Select/styles.styl
+++ b/src/components/Select/styles.styl
@@ -16,13 +16,13 @@
 
 
 
-.Select__icon
+.Select__Icon
     // Let click go through to the select
     pointer-events none
     cursor pointer
-    color slateGrey
+    color coolGrey
 
 /* target Internet Explorer 9 to undo the custom arrow */
 @media screen and (min-width:0\0)
-    .Select__icon
+    .Select__Icon
         display none
