fix(CategoriesHeader): remove top padding on incomes toggle on mobile

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -20,5 +20,8 @@
         position absolute
         line-height 1.5rem
 
+    +small-screen()
+        padding-top 0
+
 .CategoriesHeader__Breadcrumb
     margin-top 2.375rem
