🐝 fix: select control was not centered on iphone 5s

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -65,7 +65,8 @@ select-date-height-small = 2.75rem
         margin-bottom 0
         margin-right 0
         padding 0
-        height 100%
+        border 0
+        height select-date-height-small
         width 100%
 
         select
